--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -105,6 +105,8 @@ timemory_get_property_depends(TIMEMORY_SHARED_EXTERN_LIBRARIES SHARED EXTERN)
 timemory_get_property_depends(TIMEMORY_STATIC_EXTERN_LIBRARIES STATIC EXTERN)
 timemory_get_property_depends(TIMEMORY_SHARED_COMPONENT_LIBRARIES SHARED COMPONENT)
 timemory_get_property_depends(TIMEMORY_STATIC_COMPONENT_LIBRARIES STATIC COMPONENT)
+timemory_get_property_depends(TIMEMORY_SHARED_USER_BUNDLE_LIBRARIES SHARED USER_BUNDLE)
+timemory_get_property_depends(TIMEMORY_STATIC_USER_BUNDLE_LIBRARIES STATIC USER_BUNDLE)
 
 if(_BUILD_SHARED_CXX)
     build_library(
@@ -127,8 +129,9 @@ if(_BUILD_SHARED_CXX)
         timemory-external-shared
         timemory-extern
         ${TIMEMORY_SHARED_GLOBAL_LIBRARIES}
+        ${TIMEMORY_SHARED_EXTERN_LIBRARIES}
         ${TIMEMORY_SHARED_COMPONENT_LIBRARIES}
-        ${TIMEMORY_SHARED_EXTERN_LIBRARIES})
+        ${TIMEMORY_SHARED_USER_BUNDLE_LIBRARIES})
 
     target_link_libraries(timemory-cxx-shared PRIVATE
         timemory-compile-options
@@ -167,8 +170,9 @@ if(_BUILD_STATIC_CXX)
         timemory-vector
         timemory-external-static
         ${TIMEMORY_STATIC_GLOBAL_LIBRARIES}
+        ${TIMEMORY_STATIC_EXTERN_LIBRARIES}
         ${TIMEMORY_STATIC_COMPONENT_LIBRARIES}
-        ${TIMEMORY_STATIC_EXTERN_LIBRARIES})
+        ${TIMEMORY_STATIC_USER_BUNDLE_LIBRARIES})
 
     target_link_libraries(timemory-cxx-static PRIVATE
         timemory-compile-options
