--- a/source/timemory/components/user_bundle/CMakeLists.txt
+++ b/source/timemory/components/user_bundle/CMakeLists.txt
@@ -5,9 +5,10 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
+    USE_INTERFACE
     NAME                ${NAME}
     TARGET              ${NAME}-component
-    CATEGORY            COMPONENT
+    CATEGORY            USER_BUNDLE
     FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
