OMPT Updates + OMP threading tests updates
- renamed omp_tools to ompt_handle

--- a/.travis.yml
+++ b/.travis.yml
@@ -162,7 +162,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --python --ompt --kokkos --stats --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --python --ompt --stats --cxx-standard=17'"
     #
     # GCC 8
     - os: linux
