--- a/source/timemory/containers/CMakeLists.txt
+++ b/source/timemory/containers/CMakeLists.txt
@@ -10,4 +10,4 @@ build_intermediate_library(
     FOLDER              extern
     HEADERS             ${header_files}
     SOURCES             ${source_files}
-    PROPERTY_DEPENDS    GLOBAL COMPONENT)
+    PROPERTY_DEPENDS    GLOBAL COMPONENT USER_BUNDLE)
