Python profiler fixes + dynamic instrumentation
- tim::read_command_line that read /proc/<pid>/cmdline

--- a/source/timemory/ert/CMakeLists.txt
+++ b/source/timemory/ert/CMakeLists.txt
@@ -21,4 +21,5 @@ build_intermediate_library(
                         timemory-cuda
                         timemory-cuda-compiler
                         # timemory-cudart
+    PRIVATE_LINK        timemory-roofline-options
     PROPERTY_DEPENDS    GLOBAL COMPONENT USER_BUNDLE)
