--- a/source/timemory/components/roofline/CMakeLists.txt
+++ b/source/timemory/components/roofline/CMakeLists.txt
@@ -1,9 +1,7 @@
 
 if(TIMEMORY_USE_PAPI OR TIMEMORY_USE_CUPTI)
     set(NAME roofline)
-    set(DEPS
-        timemory-papi-component timemory-cupti-component
-        timemory-cpu-roofline timemory-gpu-roofline timemory-roofline)
+    set(DEPS timemory-papi-component timemory-cupti-component)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
@@ -17,5 +15,6 @@ if(TIMEMORY_USE_PAPI OR TIMEMORY_USE_CUPTI)
         HEADERS             ${header_files}
         SOURCES             ${source_files}
         DEPENDS             ${DEPS}
+        PRIVATE_LINK        timemory-cpu-roofline timemory-gpu-roofline timemory-roofline
         PROPERTY_DEPENDS    GLOBAL)
 endif()
