Various library fixes + sampling + timem papi + stubs library

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -201,7 +201,6 @@ if(WIN32)
     endif()
 endif()
 
-
 #----------------------------------------------------------------------------------------#
 #
 #                       EXTERN C libraries
@@ -260,6 +259,15 @@ if(TIMEMORY_BUILD_C)
         add_dependencies(timemory-c-shared timemory-c-static)
     endif()
 endif()
+
+
+#----------------------------------------------------------------------------------------#
+#
+#                       STUBS LIBRARY
+#
+#----------------------------------------------------------------------------------------#
+
+add_subdirectory(stubs)
 
 
 #----------------------------------------------------------------------------------------#
