factory lib + scope::data + OMPT fixes + improved compile time
- removed set_flat_profile and set_timeline_profile in lieu of set_scope
- scope::data (likely going to renamed to scope::config) now encodes scoping instead of raw booleans
-changed the sampling model, sample are kept in storage instead of component instances

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -107,6 +107,8 @@ timemory_get_property_depends(TIMEMORY_SHARED_COMPONENT_LIBRARIES SHARED COMPONE
 timemory_get_property_depends(TIMEMORY_STATIC_COMPONENT_LIBRARIES STATIC COMPONENT)
 timemory_get_property_depends(TIMEMORY_SHARED_USER_BUNDLE_LIBRARIES SHARED USER_BUNDLE)
 timemory_get_property_depends(TIMEMORY_STATIC_USER_BUNDLE_LIBRARIES STATIC USER_BUNDLE)
+timemory_get_property_depends(TIMEMORY_SHARED_FACTORY_LIBRARIES SHARED FACTORY)
+timemory_get_property_depends(TIMEMORY_STATIC_FACTORY_LIBRARIES STATIC FACTORY)
 
 if(_BUILD_SHARED_CXX)
     build_library(
@@ -131,7 +133,8 @@ if(_BUILD_SHARED_CXX)
         ${TIMEMORY_SHARED_GLOBAL_LIBRARIES}
         ${TIMEMORY_SHARED_EXTERN_LIBRARIES}
         ${TIMEMORY_SHARED_COMPONENT_LIBRARIES}
-        ${TIMEMORY_SHARED_USER_BUNDLE_LIBRARIES})
+        ${TIMEMORY_SHARED_USER_BUNDLE_LIBRARIES}
+        ${TIMEMORY_SHARED_FACTORY_LIBRARIES})
 
     target_link_libraries(timemory-cxx-shared PRIVATE
         timemory-compile-options
@@ -172,7 +175,8 @@ if(_BUILD_STATIC_CXX)
         ${TIMEMORY_STATIC_GLOBAL_LIBRARIES}
         ${TIMEMORY_STATIC_EXTERN_LIBRARIES}
         ${TIMEMORY_STATIC_COMPONENT_LIBRARIES}
-        ${TIMEMORY_STATIC_USER_BUNDLE_LIBRARIES})
+        ${TIMEMORY_STATIC_USER_BUNDLE_LIBRARIES}
+        ${TIMEMORY_STATIC_FACTORY_LIBRARIES})
 
     target_link_libraries(timemory-cxx-static PRIVATE
         timemory-compile-options
