--- a/source/timemory/components/user_bundle/CMakeLists.txt
+++ b/source/timemory/components/user_bundle/CMakeLists.txt
@@ -13,4 +13,4 @@ build_intermediate_library(
     HEADERS             ${header_files}
     SOURCES             ${source_files}
     DEPENDS             ${DEPS}
-    PROPERTY_DEPENDS    GLOBAL COMPONENT)
+    PROPERTY_DEPENDS    GLOBAL COMPONENT FACTORY)
