--- a/source/timemory/components/allinea/CMakeLists.txt
+++ b/source/timemory/components/allinea/CMakeLists.txt
@@ -6,7 +6,7 @@ if(TIMEMORY_USE_ALLINEA_MAP)
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-    build_intermediate_library(
+    build_intermediate_library(USE_INTERFACE
         NAME                ${NAME}
         TARGET              ${NAME}-component
         CATEGORY            COMPONENT
