--- a/source/timemory/components/cuda/CMakeLists.txt
+++ b/source/timemory/components/cuda/CMakeLists.txt
@@ -7,7 +7,7 @@ if(TIMEMORY_USE_CUDA)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
                                    ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
 
-    build_intermediate_library(
+    build_intermediate_library(USE_INTERFACE
         NAME                ${NAME}
         TARGET              ${NAME}-component
         CATEGORY            COMPONENT
