--- a/source/timemory/components/ompt/CMakeLists.txt
+++ b/source/timemory/components/ompt/CMakeLists.txt
@@ -7,6 +7,7 @@ if(TIMEMORY_USE_OMPT)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
     build_intermediate_library(
+        USE_INTERFACE
         NAME                ${NAME}
         TARGET              ${NAME}-component
         CATEGORY            COMPONENT
