--- a/source/timemory/components/rusage/CMakeLists.txt
+++ b/source/timemory/components/rusage/CMakeLists.txt
@@ -4,7 +4,7 @@ set(NAME rusage)
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-build_intermediate_library(
+build_intermediate_library(USE_INTERFACE
     NAME                ${NAME}
     TARGET              ${NAME}-component
     CATEGORY            COMPONENT
